# rani

./: .envrc  .gitignore  .gitlab-ci.yml  .npmrc  .oxlintrc.json  .prettierignore  CHANGELOG.md  PKGBUILD  README.md  angular.json  electron-builder.mjs  eslint.config.cjs  eslint.config.mjs  flake.nix  get_descriptions.sh  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  project.json  renovate.json  shell.nix  tailwind.config.js  transifex.yml  transloco.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.mts
.github/workflows/: close-pr.yml
.gitlab/: renovate-config.cjs
assets/: .gitignore  PKGBUILD  aur.json  games.txt  garuda-rani.desktop  get-descriptions.sh  i18n  images  parseArchwikiList.mjs  parseArchwikiList.ts  parsed  repo.json  testPackageAvailability.js  testPackageAvailability.ts  translator.ts  tsconfig.cli.json
assets/i18n/: am.json  ar.json  de.json  en.json  es.json  eu.json  fr.json  gl.json  hi.json  hu.json  id.json  it.json  ja.json  ko.json  pl.json  pt.json  ru.json  sl.json  sv.json  sw.json  tr.json  ua.json  uk.json  uz.json  zh-CN.json
assets/package-lists/: gaming.ts
assets/parsed/: documents-aur.json  documents-repo.json  games-aur.json  games-repo.json  internet-aur.json  internet-repo.json  multimedia-aur.json  multimedia-repo.json  other-aur.json  other-repo.json  science-aur.json  science-repo.json  security-aur.json  security-repo.json
assets/sources/: documents.txt  internet.txt  multimedia.txt  other.txt  science.txt  security.txt  utilities.txt
buildResources/: icon.icns
src/: index.html  styles.scss  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: change-dns.sh
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.init.ts  app.routes.ts  app.service.ts  commands.ts  constants.ts  first-boot.ts  interfaces.ts  key-handler.ts  store.ts  theme.ts  transloco-loader.ts
src/app/boot-tools/: boot-tools.component.html  (+2 more)
tests/: e2e.spec.ts
types/: electron-timber.d.ts
types/electron-versions/: index.d.ts
(+118 files in other folders)
