[package]
name = "garuda-apps"
version = "0.1.0"
description = "Garuda Linux apps"
authors = ["dr460nf1r3"]
repository = ""
edition = "2021"

[lib]
name = "garuda_apps_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-system-info = "2"
tauri-plugin-network = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls", "unsafe-headers"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
portable-pty = "0.9.0"
tauri-plugin-clipboard-manager = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
tauri-plugin-window-state = "2"


