[package]
name = "garuda-rani"
version = "2.2.0"
description = "Garuda Rani"
authors = ["dr460nf1r3", "TNE"]
repository = "https://gitlab.com/garuda-linux/applications/rani"
edition = "2021"

[lib]
name = "garuda_rani_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ['tray-icon', 'image-png'] }
tauri-plugin-clipboard = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "=2.2", features = ["rustls-tls", "unsafe-headers"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-prevent-default = "1.2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"


